<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="model"
            type="one.block.eospublicblockchain.data.model.EosAction.Execution" />
        <import type="android.view.View" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        >

        <com.google.android.material.chip.Chip
            android:id="@+id/tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/execute_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/memoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memo_title"
            android:layout_marginTop="8dp"
            android:visibility="@{(model.memo == null || model.memo.isEmpty()) ? View.INVISIBLE : View.VISIBLE}"
            app:fontFamily="@font/montserrat_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tag" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/memo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@{model.memo}"
            app:fontFamily="@font/montserrat_regular"
            app:layout_constraintStart_toEndOf="@+id/memoTitle"
            app:layout_constraintTop_toBottomOf="@+id/tag"
            tools:text="sponsorship" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/typeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/type_title"
            app:fontFamily="@font/montserrat_medium"
            app:layout_constraintEnd_toStartOf="@+id/type"
            app:layout_constraintTop_toBottomOf="@+id/tag" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.type}"
            android:layout_marginTop="8dp"
            app:fontFamily="@font/montserrat_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tag"
            tools:text="claim"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>